# Conics

./: Animations.cpp  Animations.h  CMakeLists.txt  ConicSolver.cpp  ConicSolver.h  DrawUtil.cpp  DrawUtil.h  Ellipse.cpp  Ellipse.h  LICENSE  Main.cpp  README.md
